--- a/Hospital.WPF/Controls/Ambulatory/AmbReport.xaml
+++ b/Hospital.WPF/Controls/Ambulatory/AmbReport.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="Report"/>
+        <TextBlock Margin="15" FontSize="14" Text="В разработке"/>
     </Grid>
 </UserControl>
