--- a/Hospital.WPF/Resources/Lists.xaml
+++ b/Hospital.WPF/Resources/Lists.xaml
@@ -46,7 +46,7 @@
                                     <TextBlock Grid.Column="1" Text="{Binding Label}" HorizontalAlignment="Left"/>
                                 </Grid>
                             </Expander.Header>
-                            <ContentControl DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBox}}, Path=DataContext}"
+                            <ContentControl DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext}"
                                             VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
                                             HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                             Content="{TemplateBinding Content}"/>
@@ -273,8 +273,8 @@
                         </VisualStateManager.VisualStateGroups>
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
+                                <ColumnDefinition MinWidth="50"/>
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Border Grid.ColumnSpan="2" BorderThickness="0 0 1 0"
                                     BorderBrush="{TemplateBinding BorderBrush}"
@@ -284,8 +284,15 @@
                                     CornerRadius="{Binding Path=(mah:ControlsHelper.CornerRadius), RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=OneWay}"
                                     Background="{DynamicResource MahApps.Brushes.Accent }"
                                     BorderBrush="{DynamicResource MahApps.Brushes.Accent}" Opacity="0"/>
+                            <ProgressBar Grid.ColumnSpan="2" BorderThickness="0"
+                                         Foreground="{DynamicResource MahApps.Brushes.Accent2}"
+                                         Background="Transparent" IsIndeterminate="{Binding Path=DataContext.IsLoading}">
+                                <ProgressBar.Style>
+                                    <Style TargetType="{x:Type ProgressBar}"/>
+                                </ProgressBar.Style>
+                            </ProgressBar>
                             <TextBlock  Grid.Column="0"
-                                        Text="{Binding Path=DataContext.Caption}"
+                                        Text="{Binding Path=DataContext.Caption, TargetNullValue='...'}"
                                         Foreground="{TemplateBinding Foreground}"
                                         VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                         HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
