--- a/Hospital.WPF/Resources/Local/AmbulatoryResources.xaml
+++ b/Hospital.WPF/Resources/Local/AmbulatoryResources.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:parts="clr-namespace:Hospital.WPF.Resources.Parts"
+                    xmlns:view="clr-namespace:Hospital.WPF.Views"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
 
     <Geometry x:Key="Path.Diagnosis">
         M159.88,175.82h64v64a16,16,0,0,0,16,16h64a16,16,0,0,0,16-16v-64h64a16,16,0,0,0,16-16v-64a16,16,0,0,0-16-16h-64v-64a16,16,0,0,0-16-16h-64a16,16,0,0,0-16,16v64h-64a16,16,0,0,0-16,16v64A16,16,0,0,0,159.88,175.82ZM568.07,336.13a39.91,39.91,0,0,0-55.93-8.47L392.47,415.84H271.86a16,16,0,0,1,0-32H350.1c16,0,30.75-10.87,33.37-26.61a32.06,32.06,0,0,0-31.62-37.38h-160a117.7,117.7,0,0,0-74.12,26.25l-46.5,37.74H15.87a16.11,16.11,0,0,0-16,16v96a16.11,16.11,0,0,0,16,16h347a104.8,104.8,0,0,0,61.7-20.27L559.6,392A40,40,0,0,0,568.07,336.13Z
     </Geometry>
-    
 
     <Style x:Key="tb_common" TargetType="{x:Type TextBlock}">
         <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -50,7 +50,32 @@
         <Setter Property="Foreground" Value="{DynamicResource BrushForegroundLight}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
-    
+    <Style x:Key="tb.expander.stats" TargetType="{x:Type TextBlock}">
+        <Setter Property="Visibility" Value="Visible"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="Foreground" Value="{StaticResource BrushForegroundLight}"/>
+        <Setter Property="Padding" Value="10 0"/>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type Expander}}, Path=IsExpanded}" Value="True">
+                <Setter Property="Visibility" Value="Collapsed"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style TargetType="{x:Type Label}" x:Key="label.EmptyTable" BasedOn="{StaticResource MahApps.Styles.Label}">
+        <Setter Property="Visibility" Value="Collapsed"/>
+        <Setter Property="Content" Value="Нет данных..."/>
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="Background" Value="{StaticResource BrushPrimaryBorderLight}"/>
+        <Setter Property="Foreground" Value="{StaticResource BrushForegroundLight}"/>
+        <Setter Property="Padding" Value="15,0"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontWeight" Value="DemiBold"/>
+        <Setter Property="FontStyle" Value="Italic"/>
+    </Style>
 
     <Style x:Key="tb.Panel" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MahApps.Styles.TextBox}">
         <Setter Property="mah:ControlsHelper.CornerRadius" Value="2"/>
@@ -125,6 +150,7 @@
         <Setter Property="mah:TabControlHelper.Transition" Value="Default"/>
         <Setter Property="Padding" Value="0"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="IsEnabled" Value="{Binding Path=DataContext.IsEditable, RelativeSource={RelativeSource AncestorType={x:Type view:Ambulatory}}}"/>
     </Style>
 
     <Style TargetType="{x:Type mah:DateTimePicker}" x:Key="dtp.Panel">
